# Algorithm-Structure

./: README.md  go.mod
.cph/: .B_Marlin.go_5076e98b8826192bd61846efd5d07228.prob
Arena/: Arena.cc  arena.h  arena_test.cc
BFS/: 0-1BFS.cpp  multi-source BFS.cpp
Binary Search/: BinarySearch.cpp
Bit Manipulation/: Add&Multiply.cpp
BloomFilter/: BloomFilter.cpp  BloomFilter_LevelDB.cpp  BloomFilter_LevelDB.h
Buffer/: LOCKFREE_DESIGN.md  PERFORMANCE_REPORT.md  benchmark_comparison_test.go  example_lockfree_usage.go  ringbuffer_lockfree.go  ringbuffer_lockfree_test.go
Classical Problems/: 24Game.cpp  Tomohiko Sakamoto.cpp
Combination/: combination.cpp  quickPow.cpp
Constructive Algorithm/: Decompose.cpp  Determine matrix.cpp  Reverse Value.cpp  Reverse string.cpp
ConvexHull/: Andrew.cpp
Crypto/: int2base62.go  merkleTree.go
DP/: rerootingDp.cpp
DSU/: DSU.cpp
GCD/: GCD.cpp
Gosper Hack/: gosperHack.cpp
Graph/: Bipartite Graph.cpp  Dijkstra.cpp  Floyd.cpp  Kruskal.cpp
Greedy/: Action Figures.cpp  wiggleSort.cpp
Hash/: HashTable.cc  classHash1.cc  classHash2.cc  stringHash.cc
Interview/: 2  24 Game.go  LargestLessThanK.cpp  POJ2018 P1404.go  Sqrt(2).cpp  knight_tour.cpp  单向链表逆序输出.cpp  大于n且相邻数字不同的最小整数.cpp  排序-每次将数字移到开头.cpp  最小整数字符串版本.cpp  负n进制加法.cpp  阿拉伯数字转中文.cpp
Singleton/rust/: Cargo.toml  README.md  arc_mutex_singleton.rs  comparison_example.rs  lazy_static_singleton.rs  once_cell_singleton.rs  once_lock_singleton.rs  once_singleton.rs  rwlock_singleton.rs
practice/20250924/: CMakeLists.txt  lru.cpp  run_tests.sh  test_lru.cpp
(+116 files in other folders)
